fixed button spacing in header

--- a/_app/css/modules/header.css
+++ b/_app/css/modules/header.css
@@ -16,6 +16,12 @@
 	position: relative;
 }
 
+.button-container__builder, 
+.button-container__completed-builds, 
+.button-container__browse-products {
+	padding: 1vW;
+}
+
 .divider {
 	width: 100%;
 	height: 2px;
